--- a/.github/workflows/main_samson-portfolio.yml
+++ b/.github/workflows/main_samson-portfolio.yml
@@ -27,11 +27,15 @@ jobs:
           npm run build --if-present
           npm run test --if-present
       
+      - name: Archive build output
+        run: |
+          tar -czf node-app.tgz .
+
       - name: Upload artifact for deployment job
         uses: actions/upload-artifact@v4
         with:
           name: node-app
-          path: .
+          path: node-app.tgz
 
   deploy:
     runs-on: ubuntu-latest
