--- a/.github/workflows/main_samson-portfolio.yml
+++ b/.github/workflows/main_samson-portfolio.yml
@@ -26,16 +26,19 @@ jobs:
           npm install
           npm run build --if-present
           npm run test --if-present
-      
-      - name: Archive build output
-        run: |
-          tar -czf node-app.tgz .
 
+      # Zip the build directory
+      - name: Zip Release
+        uses: TheDoctor0/zip-release@0.7.6
+        with:
+          filename: release.zip
+          path: ./build/*
+      
       - name: Upload artifact for deployment job
         uses: actions/upload-artifact@v4
         with:
           name: node-app
-          path: node-app.tgz
+          path: release.zip
 
   deploy:
     runs-on: ubuntu-latest
@@ -65,5 +68,5 @@ jobs:
         with:
           app-name: 'samson-portfolio'
           slot-name: 'Production'
-          package: node-app.tgz
+          package: .
           
