--- a/.github/workflows/main_samson-portfolio.yml
+++ b/.github/workflows/main_samson-portfolio.yml
@@ -27,18 +27,15 @@ jobs:
           npm run build --if-present
           npm run test --if-present
 
-      # Zip the build directory
-      - name: Zip Release
-        uses: TheDoctor0/zip-release@0.7.6
-        with:
-          filename: release.zip
-          path: ./build/*
+      - name: Archive build output
+        run: |
+          tar -czf node-app.tgz .
       
       - name: Upload artifact for deployment job
         uses: actions/upload-artifact@v4
         with:
           name: node-app
-          path: release.zip
+          path: node-app.tgz
 
   deploy:
     runs-on: ubuntu-latest
@@ -54,7 +51,12 @@ jobs:
         uses: actions/download-artifact@v4
         with:
           name: node-app
+          path: ./download
       
+      - name: Extract artifact
+        run: |
+          tar -xzf ./download/node-app.tgz -C ./download
+
       - name: Login to Azure
         uses: azure/login@v2
         with:
@@ -68,5 +70,5 @@ jobs:
         with:
           app-name: 'samson-portfolio'
           slot-name: 'Production'
-          package: .
+          package: ./download
           
