--- a/.github/workflows/main_samson-portfolio.yml
+++ b/.github/workflows/main_samson-portfolio.yml
@@ -27,15 +27,17 @@ jobs:
           npm run build --if-present
           npm run test --if-present
 
-      - name: Archive build output
-        run: |
-          tar -czf node-app.tgz .
+      - name: Zip Release
+        uses: TheDoctor0/zip-release@0.6.1
+        with:
+          filename: release.zip
+          path: ./build/*
       
       - name: Upload artifact for deployment job
         uses: actions/upload-artifact@v4
         with:
           name: node-app
-          path: node-app.tgz
+          path: release.zip
 
   deploy:
     runs-on: ubuntu-latest
@@ -51,12 +53,7 @@ jobs:
         uses: actions/download-artifact@v4
         with:
           name: node-app
-          path: ./download
       
-      - name: Extract artifact
-        run: |
-          tar -xzf ./download/node-app.tgz -C ./download
-
       - name: Login to Azure
         uses: azure/login@v2
         with:
@@ -70,5 +67,5 @@ jobs:
         with:
           app-name: 'samson-portfolio'
           slot-name: 'Production'
-          package: ./download
+          package: release.zip
           
