--- a/.github/workflows/main_samson-portfolio.yml
+++ b/.github/workflows/main_samson-portfolio.yml
@@ -26,18 +26,12 @@ jobs:
           npm install
           npm run build --if-present
           npm run test --if-present
-
-      - name: Zip Release
-        uses: TheDoctor0/zip-release@0.6.1
-        with:
-          filename: release.zip
-          path: ./build/*
       
       - name: Upload artifact for deployment job
         uses: actions/upload-artifact@v4
         with:
           name: node-app
-          path: release.zip
+          path: .
 
   deploy:
     runs-on: ubuntu-latest
@@ -67,5 +61,5 @@ jobs:
         with:
           app-name: 'samson-portfolio'
           slot-name: 'Production'
-          package: release.zip
+          package: .
           
