--- a/.github/workflows/main_samson-portfolio.yml
+++ b/.github/workflows/main_samson-portfolio.yml
@@ -55,6 +55,13 @@ jobs:
         with:
           name: node-app
 
+      - name: Login to Azure
+        uses: azure/login@v2
+        with:
+          client-id: ${{ secrets.AZUREAPPSERVICE_CLIENTID_16522ABFB2CD42729675390F10055BE7 }}
+          tenant-id: ${{ secrets.AZUREAPPSERVICE_TENANTID_42F8E7AA8A62456097315002B23C09E8 }}
+          subscription-id: ${{ secrets.AZUREAPPSERVICE_SUBSCRIPTIONID_4CCCEE164DD944DBB4181DEB0CBCDAB3 }}
+
       - name: 'Deploy to Azure Web App'
         uses: azure/webapps-deploy@v3
         id: deploy-to-webapp
