--- a/.github/workflows/main_samson-portfolio.yml
+++ b/.github/workflows/main_samson-portfolio.yml
@@ -68,6 +68,6 @@ jobs:
         with:
           app-name: 'samson-portfolio'
           slot-name: 'Production'
-          package: *.zip
+          package: release.zip
           type: ZIP
           
