--- a/tsconfig.json
+++ b/tsconfig.json
@@ -24,6 +24,7 @@
     ],
     "baseUrl": ".",
     "paths": {
+      "@Components/*": ["src/components/*"],
       "@Styles/*": ["src/styles/*"],
       "@/*": [
         "./src/*"
